--- a/phishyPhrameworkDatabases/src/main/AndroidManifest.xml
+++ b/phishyPhrameworkDatabases/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.axolotlinteractive.databases.databaseobject">
+    package="com.axolotlinteractive.phishyphramework.databaseobject">
 
     <application android:allowBackup="true"
         android:label="@string/app_name"
